Added sample .service file to standard install and fixed a bug preventing ImportFile from stopping when run as a standalone java program. Commit also includes first batch of minor FindBugs fixes.